--- a/linux-c201/README
+++ b/linux-c201/README
@@ -3,8 +3,6 @@ Short guide to my patches
 0020: Allows HDMI to work properly, likely not mainlineable (atleast as-is)
 	but i can live in hope...
 	seperate commits at: https://github.com/urjaman/linux/tree/rk3288_chromebook_hdmi_v3
-0021: Fixes USB hotplug, a version of this by someone else should soon
-	be in mainline and i can remove this
 0022: 100% hack, but should be harmless on veyrons and allows you to use the usb port 
 	w/ an otg controller as a device
 0023: Runs the panel actually at ~60Hz, dunno how useful but eases my mind.
@@ -12,4 +10,11 @@ Short guide to my patches
 	what the panel is ran at so that any apps doing frame timing math should
 	work better.
 0024: Enables dithering for the 6-bit per channel panel, fixes banding.
-
+0025: Implements the gamma LUT so things like redshift "work", this is
+      still a bit WIP (flickers) since the hardware is really f'ed up in making
+      it really hard (= almost impossible? that is to be determined)
+      to change from one gamma table to another without a frame
+      with the gamma off in between them.
+0026: Fixes sound output in 4.19... (a small-diff revert while we wait for proper fix)
+0027: Slightly adjust the device tree entry for the GPU so that ARM mali kernel module loads and finds it
+	(this is otherwise entirely untested stuff, just for debugging it)
