Updated to 4.20.15 + looking at eMMC + config cleaning
I got curious so looked around github for eMMC patches and came up with these,
thank you
https://github.com/Miouyouyou/RockMyy/tree/master/patches/kernel/v4.20
and
https://github.com/SolidHal/PrawnOS/tree/4.19-dev

I updated to 4.20.15 "on my own" (not following arch upstream)
just because i wanted to bump it while 4.20 is
stilling getting updates and I'm as usual in not any super hurry to
jump trees ...

--- a/linux-c201/README
+++ b/linux-c201/README
@@ -17,3 +17,11 @@ Short guide to my patches
       with the gamma off in between them.
 0027: Slightly adjust the device tree entry for the GPU so that ARM mali kernel module loads and finds it
 	(this is otherwise entirely untested stuff, just for debugging it)
+
+
+004x: Not exactly mine, but interesting patches re:eMMC support from:
+	https://github.com/Miouyouyou/RockMyy/tree/master/patches/kernel/v4.20
+	and
+	https://github.com/SolidHal/PrawnOS/tree/4.19-dev
+
+	(Still kinda untested, but atleast the emmc partitions seem to be found on boot now...)
